deployments/canary/rollout.yml
# This example demonstrates a Rollout using the canary update strategy, which contains a manual
# gate before promoting the new stack.
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary
  labels:
    app: canary-app
spec:
  replicas: 10
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: canary-app
  template:
    metadata:
      labels:
        app: canary-app
    spec:
      containers:
        - name: canary
          image: app:v1
          imagePullPolicy: Never
          resources:
            requests:
              memory: 100Mi
              cpu: 10m
          ports:
            - containerPort: 3000
  strategy:
    canary:
      stableMetadata:
        labels:
          role: prod
      canaryMetadata:
        labels:
          role: preview
      # analysis:
      #   templates:
      #     - templateName: performance
      # dynamicStableScale: true
      # abortScaleDownDelaySeconds: 600
      # maxUnavailable: 2
      # maxSurge: '25%'
      # trafficRouting
      canaryService: canary-preview
      stableService: canary-prod
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: { duration: 10 }
        - setWeight: 60
        - pause: { duration: 10 }
        - setWeight: 80
        - pause: { duration: 10 }
