deployments/canary/service.yml
kind: Service
apiVersion: v1
metadata:
  name: canary-prod
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io.scheme: "http"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3000"
spec:
  selector:
    app: canary-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: canary-preview
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io.scheme: "http"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3000"
spec:
  selector:
    app: canary-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
