deployments/canary/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: prod.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: canary-prod
                port:
                  number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: canary-preview
#   annotations:
#     kubernetes.io/ingress.class: nginx
# spec:
#   rules:
#     - host: preview.local
#       http:
#         paths:
#           - path: /
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: canary-preview
#                 port:
#                   number: 80
